Added Both View and Edit in Lanterna Editor. Fixed issue with versionNumber and document ID. Added some help methods. Expanded on AuthorMenu.
Added Both View and Edit in Lanterna Editor. Fixed issue with versionNumber and document ID. One of the issues was the Document ID, which nothing seemed to fix it. Restarted IntelliJ and it got fixed without me changing the code...